# dtb-iop-raw-elt

./: CLAUDE.md  README.md  databricks.yml  pyproject.toml
.github/workflows/: run-ged-load-test.yml  run-oracle-lakeflow-test.yml  test-connection.yml
databricks/tasks/: carga_files_ged_raw.py  carga_files_ged_raw_test.py  create_tb_diferencial_paths.py
docs/: lakeflow-declarative-pipelines.md  silver-layer-handoff.md
pipelines/oracle_test/transformations/: paciente_atend_medic_test.py  raw_tables_loop_test.py
resources/: load_files_ged_job.yml  oracle_pipeline_test.pipeline.yml
src/dtb_iop_raw_elt/ged/: carga_files.py  diff_pathfiles.py
tests/: conftest.py
tests/ged/: test_carga_files.py  test_diff_pathfiles.py
