[project]
name = "dtb-iop-raw-elt"
version = "0.1.0"
description = "ELT do IOP: extração Oracle (Tasy) e GED para iop.raw, no Unity Catalog."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "smbprotocol>=1.13",
]

[dependency-groups]
dev = [
    "ruff>=0.14",
    "pytest>=8.0",
    "pyspark>=3.5",
    "pandas>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dtb_iop_raw_elt"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
